include/dss_capi.h

    /*! 
    Name of Bus
    */
    DSS_CAPI_DLL const char* Bus_Get_Name(void);
    /*! 
    Number of Nodes this bus.
    */
    DSS_CAPI_DLL int32_t Bus_Get_NumNodes(void);
    /*! 
    Double Array of sequence voltages at this bus. Magnitudes only.
    */
    DSS_CAPI_DLL void Bus_Get_SeqVoltages(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_SeqVoltages but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_SeqVoltages_GR(void);
    /*! 
    Complex array of voltages at this bus.
    */
    DSS_CAPI_DLL void Bus_Get_Voltages(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_Voltages but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_Voltages_GR(void);
    /*! 
    Integer Array of Node Numbers defined at the bus in same order as the voltages.
    */
    DSS_CAPI_DLL void Bus_Get_Nodes(int32_t** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_Nodes but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_Nodes_GR(void);
    /*! 
    Short circuit currents at bus; Complex Array.
    */
    DSS_CAPI_DLL void Bus_Get_Isc(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_Isc but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_Isc_GR(void);
    /*! 
    Open circuit voltage; Complex array.
    */
    DSS_CAPI_DLL void Bus_Get_Voc(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_Voc but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_Voc_GR(void);
    /*! 
    Base voltage at bus in kV
    */
    DSS_CAPI_DLL double Bus_Get_kVBase(void);
    /*! 
    Complex Array of pu voltages at the bus.
    */
    DSS_CAPI_DLL void Bus_Get_puVoltages(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_puVoltages but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_puVoltages_GR(void);
    /*! 
    Complex Zero-Sequence short circuit impedance at bus.
    */
    DSS_CAPI_DLL void Bus_Get_Zsc0(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_Zsc0 but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_Zsc0_GR(void);
    /*! 
    Complex Positive-Sequence short circuit impedance at bus.
    */
    DSS_CAPI_DLL void Bus_Get_Zsc1(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_Zsc1 but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_Zsc1_GR(void);
    /*! 
    Complex array of Zsc matrix at bus. Column by column.
    */
    DSS_CAPI_DLL void Bus_Get_ZscMatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_ZscMatrix but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_ZscMatrix_GR(void);
    DSS_CAPI_DLL uint16_t Bus_ZscRefresh(void);
    /*! 
    Complex array of Ysc matrix at bus. Column by column.
    */
    DSS_CAPI_DLL void Bus_Get_YscMatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_YscMatrix but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_YscMatrix_GR(void);
    /*! 
    Indicates whether a coordinate has been defined for this bus
    */
    DSS_CAPI_DLL uint16_t Bus_Get_Coorddefined(void);
    /*! 
    X Coordinate for bus (double)
    */
    DSS_CAPI_DLL double Bus_Get_x(void);
    /*! 
    X Coordinate for bus (double)
    */
    DSS_CAPI_DLL void Bus_Set_x(double Value);
    /*! 
    Y coordinate for bus(double)
    */
    DSS_CAPI_DLL double Bus_Get_y(void);
    /*! 
    Y coordinate for bus(double)
    */
    DSS_CAPI_DLL void Bus_Set_y(double Value);
    /*! 
    Distance from EnergyMeter (if non-zero)
    */
    DSS_CAPI_DLL double Bus_Get_Distance(void);
    DSS_CAPI_DLL int32_t Bus_GetUniqueNodeNumber(int32_t StartNumber);
    /*! 
    Complex Double array of Sequence Voltages (0, 1, 2) at this Bus.
    */
    DSS_CAPI_DLL void Bus_Get_CplxSeqVoltages(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_CplxSeqVoltages but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_CplxSeqVoltages_GR(void);
    /*! 
    Average interruption duration, hr.
    */
    DSS_CAPI_DLL double Bus_Get_Int_Duration(void);
    /*! 
    Accumulated failure rate downstream from this bus; faults per year
    */
    DSS_CAPI_DLL double Bus_Get_Lambda(void);
    /*! 
    Accumulated customer outage durations
    */
    DSS_CAPI_DLL double Bus_Get_Cust_Duration(void);
    /*! 
    Annual number of customer-interruptions from this bus
    */
    DSS_CAPI_DLL double Bus_Get_Cust_Interrupts(void);
    /*! 
    Total numbers of customers served downline from this bus
    */
    DSS_CAPI_DLL int32_t Bus_Get_N_Customers(void);
    /*! 
    Number of interruptions this bus per year
    */
    DSS_CAPI_DLL double Bus_Get_N_interrupts(void);
    /*! 
    Returns Complex array of pu L-L voltages for 2- and 3-phase buses. Returns -1.0 for 1-phase bus. If more than 3 phases, returns only 3 phases.
    */
    DSS_CAPI_DLL void Bus_Get_puVLL(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_puVLL but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_puVLL_GR(void);
    /*! 
    For 2- and 3-phase buses, returns array of complex numbers representing L-L voltages in volts. Returns -1.0 for 1-phase bus. If more than 3 phases, returns only first 3.
    */
    DSS_CAPI_DLL void Bus_Get_VLL(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_VLL but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_VLL_GR(void);
    /*! 
    Array of doubles containing voltage magnitude, angle (degrees) pairs in per unit
    */
    DSS_CAPI_DLL void Bus_Get_puVmagAngle(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_puVmagAngle but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_puVmagAngle_GR(void);
    /*! 
    Array of doubles containing voltages in Magnitude (VLN), angle (degrees)
    */
    DSS_CAPI_DLL void Bus_Get_VMagAngle(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_VMagAngle but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_VMagAngle_GR(void);
    /*! 
    Total length of line downline from this bus, in miles. For recloser siting algorithm.
    */
    DSS_CAPI_DLL double Bus_Get_TotalMiles(void);
    /*! 
    Integer ID of the feeder section in which this bus is located.
    */
    DSS_CAPI_DLL int32_t Bus_Get_SectionID(void);