src/v7/CAPI_Bus.pas

UNIT CAPI_Bus;
{$inline on}

INTERFACE

USES CAPI_Utils;

function Bus_Get_Name():PAnsiChar;cdecl;
function Bus_Get_NumNodes():Integer;cdecl;
PROCEDURE Bus_Get_SeqVoltages(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_SeqVoltages_GR();cdecl;
PROCEDURE Bus_Get_Voltages(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_Voltages_GR();cdecl;
PROCEDURE Bus_Get_Nodes(var ResultPtr: PInteger; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_Nodes_GR();cdecl;
PROCEDURE Bus_Get_Isc(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_Isc_GR();cdecl;
PROCEDURE Bus_Get_Voc(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_Voc_GR();cdecl;
function Bus_Get_kVBase():Double;cdecl;
PROCEDURE Bus_Get_puVoltages(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_puVoltages_GR();cdecl;
PROCEDURE Bus_Get_Zsc0(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_Zsc0_GR();cdecl;
PROCEDURE Bus_Get_Zsc1(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_Zsc1_GR();cdecl;
PROCEDURE Bus_Get_ZscMatrix(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_ZscMatrix_GR();cdecl;
function Bus_ZscRefresh():WordBool;cdecl;
PROCEDURE Bus_Get_YscMatrix(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_YscMatrix_GR();cdecl;
function Bus_Get_Coorddefined():WordBool;cdecl;
function Bus_Get_x():Double;cdecl;
procedure Bus_Set_x(Value: Double);cdecl;
function Bus_Get_y():Double;cdecl;
procedure Bus_Set_y(Value: Double);cdecl;
function Bus_Get_Distance():Double;cdecl;
function Bus_GetUniqueNodeNumber(StartNumber: Integer):Integer;cdecl;
PROCEDURE Bus_Get_CplxSeqVoltages(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_CplxSeqVoltages_GR();cdecl;
function Bus_Get_Int_Duration():Double;cdecl;
function Bus_Get_Lambda():Double;cdecl;
function Bus_Get_Cust_Duration():Double;cdecl;
function Bus_Get_Cust_Interrupts():Double;cdecl;
function Bus_Get_N_Customers():Integer;cdecl;
function Bus_Get_N_interrupts():Double;cdecl;
PROCEDURE Bus_Get_puVLL(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_puVLL_GR();cdecl;
PROCEDURE Bus_Get_VLL(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_VLL_GR();cdecl;
PROCEDURE Bus_Get_puVmagAngle(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_puVmagAngle_GR();cdecl;
PROCEDURE Bus_Get_VMagAngle(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Bus_Get_VMagAngle_GR();cdecl;
function Bus_Get_TotalMiles():Double;cdecl;
function Bus_Get_SectionID():Integer;cdecl;

IMPLEMENTATION

USES CAPI_Constants, DSSGlobals, Circuit, Ucomplex, MathUtil, sysutils, ExecHelper, SolutionAlgs, Utilities, Bus;

function Bus_Get_Name_AnsiString():AnsiString;inline;
begin
     Result := '';

     If (ActiveCircuit <> Nil) Then With ActiveCircuit Do
     IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
              Result := BusList.Get(ActiveBusIndex);
end;

function Bus_Get_Name():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Bus_Get_Name_AnsiString());
end;
//------------------------------------------------------------------------------
function Bus_Get_NumNodes():Integer;cdecl;
begin
     Result := 0;
     If (ActiveCircuit <> Nil) Then With ActiveCircuit Do
     IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
       Result := ActiveCircuit.Buses^[ActiveCircuit.ActiveBusIndex].NumNodesThisBus;

end;
//------------------------------------------------------------------------------
PROCEDURE Bus_Get_SeqVoltages(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
// Compute sequence voltages for Active Bus
// magnitude only
// returns a set of seq voltages (3)
VAR
  Result: PDoubleArray;
  Nvalues,i, iV:Integer;
  VPh, V012 : Array[1..3] of Complex;

Begin
   IF ActiveCircuit = nil Then Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1)
   End
   ELSE With ActiveCircuit Do
   IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
   Begin
      Nvalues := Buses^[ActiveBusIndex].NumNodesThisBus;
      If Nvalues >3 then Nvalues := 3;

      // Assume nodes 1, 2, and 3 are the 3 phases
      Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (2) + 1);
      IF Nvalues<>3 THEN
         For i := 1 to 3 DO Result[i-1] := -1.0  // Signify seq voltages n/A for less then 3 phases
      ELSE
      Begin

          iV := 0;
          FOR i := 1 to  3 DO
          Begin
            Vph[i]  := Solution.NodeV^[Buses^[ActiveBusIndex].Find(i)];
          End;

          Phase2SymComp(@Vph, @V012);   // Compute Symmetrical components

          For i := 1 to 3 DO  // Stuff it in the result
          Begin
             Result[iV] := Cabs(V012[i]);
             Inc(iV);
          End;

      End;
   End
  ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);


end;
PROCEDURE Bus_Get_SeqVoltages_GR();cdecl;
// Same as Bus_Get_SeqVoltages but uses global result (GR) pointers
begin
   Bus_Get_SeqVoltages(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Bus_Get_Voltages(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
// Return Complex for all nodes of voltages for Active Bus
VAR
  Result: PDoubleArray;
  Nvalues,i,  iV, NodeIdx, jj : Integer;
  Volts : Complex;
  pBus : TDSSBus;

Begin
   IF ActiveCircuit = nil Then Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1)
   End
   ELSE With ActiveCircuit Do
   IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
   Begin
      pBus    := Buses^[ActiveBusIndex];
      Nvalues := pBus.NumNodesThisBus;
      Result  := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (2*NValues -1) + 1);
      iV := 0;
      jj := 1;
      WITH pBus DO
      FOR i := 1 to  NValues DO
      Begin
            // this code so nodes come out in order from smallest to larges
            Repeat
                 NodeIdx := FindIdx(jj);  // Get the index of the Node that matches jj
                 inc(jj)
            Until NodeIdx>0;

            Volts      := Solution.NodeV^[GetRef(NodeIdx)];  // referenced to pBus
            Result[iV] := Volts.re;
            Inc(iV);
            Result[iV] := Volts.im;
            Inc(iV);
      End;
  End
  ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // just return null array

end;
PROCEDURE Bus_Get_Voltages_GR();cdecl;
// Same as Bus_Get_Voltages but uses global result (GR) pointers
begin
   Bus_Get_Voltages(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Bus_Get_Nodes(var ResultPtr: PInteger; ResultCount: PInteger);cdecl;
// return array of node numbers corresponding to voltages
VAR
  Result: PIntegerArray;
  Nvalues,i, iV, NodeIdx, jj:Integer;
  pBus : TDSSBus;

Begin
   IF ActiveCircuit = nil Then Begin
        Result := DSS_RecreateArray_PInteger(ResultPtr, ResultCount, (0) + 1)
   End
   ELSE With ActiveCircuit Do
   IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
   Begin
      pBus := Buses^[ActiveBusIndex];
      With pBus Do
      Begin
          Nvalues := NumNodesThisBus;
          Result := DSS_RecreateArray_PInteger(ResultPtr, ResultCount, (NValues -1) + 1);
          iV := 0;
          jj := 1;
          FOR i := 1 to  NValues DO
          Begin
                // this code so nodes come out in order from smallest to larges
              Repeat
                   NodeIdx := FindIdx(jj);  // Get the index of the Node that matches jj
                   inc(jj)
              Until NodeIdx>0;
             Result[iV] := Buses^[ActiveBusIndex].GetNum(NodeIdx);
             Inc(iV);
          End;
      End;
  End
  ELSE Result := DSS_RecreateArray_PInteger(ResultPtr, ResultCount, (0) + 1);  // just return null array

end;
PROCEDURE Bus_Get_Nodes_GR();cdecl;
// Same as Bus_Get_Nodes but uses global result (GR) pointers
begin
   Bus_Get_Nodes(GR_DataPtr_PInteger, GR_CountPtr_PInteger)
end;

//------------------------------------------------------------------------------
PROCEDURE Bus_Get_Isc(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
// Return the short circuit current
VAR
  Result: PDoubleArray;
   Isc :Complex;
   i, iV, NValues :Integer;

begin

   IF ActiveCircuit = nil Then Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1)
   End
   ELSE With ActiveCircuit Do
   IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
   Begin
      If Buses^[ActiveBusIndex].BusCurrent <> nil Then
      Begin
        NValues := Buses^[ActiveBusIndex].NumNodesThisBus;
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (2*NValues -1) + 1);
        iV := 0;
        FOR i := 1 to  NValues DO
        Begin
           Isc := Buses^[ActiveBusIndex].BusCurrent^[i];
           Result[iV] := Isc.Re;
           Inc(iV);
           Result[iV] := Isc.Im;
           Inc(iV);
        End;
      End
      Else
          Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
  End
  ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1) ;  // just return null array

end;
PROCEDURE Bus_Get_Isc_GR();cdecl;
// Same as Bus_Get_Isc but uses global result (GR) pointers
begin
   Bus_Get_Isc(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Bus_Get_Voc(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
// Return the Open circuit Voltage for this bus
VAR
  Result: PDoubleArray;
   Voc :Complex;
   i, iV, NValues :Integer;

begin

   IF ActiveCircuit = nil Then Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1)
   End
   ELSE With ActiveCircuit Do
   IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
   Begin
      If Buses^[ActiveBusIndex].VBus <> nil Then
      Begin
        NValues := Buses^[ActiveBusIndex].NumNodesThisBus;
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (2*NValues -1) + 1);
        iV := 0;
        FOR i := 1 to  NValues DO
        Begin
           Voc := Buses^[ActiveBusIndex].VBus^[i];
           Result[iV] := Voc.Re;
           Inc(iV);
           Result[iV] := Voc.Im;
           Inc(iV);
        End;
      End
      Else
          Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
  End
  ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1) ;  // just return null array


end;
PROCEDURE Bus_Get_Voc_GR();cdecl;
// Same as Bus_Get_Voc but uses global result (GR) pointers
begin
   Bus_Get_Voc(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
function Bus_Get_kVBase():Double;cdecl;
begin
     Result := 0.0;
     If (ActiveCircuit <> Nil) Then With ActiveCircuit Do
     IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
       Result := ActiveCircuit.Buses^[ActiveCircuit.ActiveBusIndex].kVBase ;

end;
//------------------------------------------------------------------------------
PROCEDURE Bus_Get_puVoltages(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
// Returns voltages at bus in per unit.  However, if kVBase=0, returns actual volts
VAR
  Result: PDoubleArray;
  Nvalues,i, iV,  NodeIdx, jj :Integer;
  Volts:Complex;
  BaseFactor:Double;
  pBus : TDSSBus;
